Perfecting layout and fixing alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -9,35 +9,66 @@
     box-sizing: border-box;
 }
 
-
 body {
     font-family: 'Lato', sans-serif;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
 }
 
 /*----------------Nav Bar Styles ---------------------*/
 
 .navbar {
     background-color: #E4EDF2;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
 }
 
-
-/*----------------Hero Styles ---------------------*/
-#hero h1 {
-    color: #24116A;    
+/*----------------Hero/header Styles ---------------------*/
+#hero {
+    background-color: #fff;
+    height: 767px;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
 }
+
 #hero .hero-bg {
     background-color: #E4EDF2;
     height: 684px;
 }
- header {
-     background-color: #fff;
- }
 
+#hero h3 {
+    margin-top: 50px;
+}
+
+#hero h1 {
+    color: #24116A;
+}
+
+#autoImages {
+    margin-top: 100px;
+
+}
 /*----------------Main Styles ---------------------*/
+#main .blue-box {
+    background-color: #F1F7FB;
+    border-radius: 10px;
+    width: 1162px;
+    height: 697px;
+}
+#main .big-container {
+    background-color: #fff;
+    height: 1232px;
+    box-shadow: 0px 0px 50px rgba(22, 82, 240, 0.05);
+}
+
 #main img {
     height: 80px;
-   
 }
+
+#main h1 {
+    margin-top: 83px;
+}
+
 #main p {
     border-left: 2px solid #BDBDBD;
 }
@@ -51,6 +82,31 @@ body {
     height: 278px;
 }
 
+/*----------------Support Styles ---------------------*/
+#support {
+    height: 450px;
+}
 
+#support button {
+      background: #00AEFF;
+    border-radius: 3px;
+    color: #fff;
+}
+
+#support img {
+    height: 50px;
+    width: 50px;
+}
 
 /*----------------Footer Styles ---------------------*/
+#footer {
+    background-color: #24116A;
+    height: 468px;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+}
+
+
+#footer i {
+    font-size: 1.625em;
+}
